<resources>
    <string name="app_name">Taskvatar</string>
    <string name="base">Base</string>
    <string name="action_settings">Settings</string>
    <string name="left_arm">Left arm</string>
    <string name="right_arm">Right arm</string>
    <string name="left_leg">Left leg</string>
    <string name="right_leg">Right leg</string>
    <string name="hat">Hat</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="task_time">Task Time</string>
    <string name="new_task">New Task</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="finish">Finish</string>
    <string name="submit">Submit</string>
    <string name="add_user">Add User</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
