<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/avatar_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:clickable="true">

    <ImageView
        android:id="@+id/base"
        android:contentDescription="@string/base"
        app:srcCompat="@drawable/base_red"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <ImageView
        android:id="@+id/right_arm"
        android:contentDescription="@string/right_arm"
        app:srcCompat="@drawable/right_arm_robot"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <ImageView
        android:id="@+id/left_arm"
        android:contentDescription="@string/left_arm"
        app:srcCompat="@drawable/left_arm_muscly"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <ImageView
        android:id="@+id/left_leg"
        android:contentDescription="@string/left_leg"
        app:srcCompat="@drawable/left_leg_robot"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <ImageView
        android:id="@+id/right_leg"
        android:contentDescription="@string/right_leg"
        app:srcCompat="@drawable/right_leg_muscly"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <ImageView
            android:id="@+id/hat"
            android:contentDescription="@string/hat"
            app:srcCompat="@drawable/hat_crown"

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

</android.support.constraint.ConstraintLayout>